<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/phone_number" android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editTextPhoneNumber" android:inputType="number">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/picture"></TextView>
    <ImageButton android:id="@+id/imageButtonPicture" android:layout_gravity="center" android:scaleType="fitXY" android:layout_width="100px" android:layout_height="100px" android:background="@drawable/avatar"></ImageButton>
    <Button android:layout_height="wrap_content" android:layout_gravity="right" android:layout_width="80dp" android:text="@string/ok" android:id="@+id/buttonSubmit"></Button>
    
</LinearLayout>
