<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1">
	
	<LinearLayout
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:id="@+id/UploadingLayout" android:layout_height="200dp" android:visibility="gone">
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/phone_number" android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editTextPhoneNumber" android:inputType="number">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/picture"></TextView>
    <ImageButton android:id="@+id/imageButtonPicture" android:layout_gravity="center" android:scaleType="fitXY" android:layout_width="100px" android:layout_height="100px" android:background="@drawable/avatar"></ImageButton>
    <Button android:layout_height="wrap_content" android:layout_gravity="right" android:layout_width="80dp" android:text="@string/ok" android:id="@+id/buttonSubmit"></Button>
</LinearLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:weightSum="1" android:id="@+id/MainLayout" android:layout_below="@+id/UploadingLayout">
    
	<Button android:layout_height="wrap_content" android:text="@string/upload"
		android:id="@+id/buttonUpload" android:layout_weight="0.01"
		android:layout_width="fill_parent" ></Button>
	<View android:id="@+id/strut" android:layout_width="0dp"
		android:layout_height="0dp" android:layout_centerHorizontal="true"
		android:layout_below="@+id/buttonUpload" />
	<Button android:layout_height="wrap_content" android:id="@+id/buttonCheckUpdate"
		android:text="@string/check_update" android:layout_width="0dp"
		android:layout_below="@+id/buttonUpload" android:layout_alignRight="@id/strut"
		android:layout_alignParentLeft="true"></Button>
	<Button android:layout_height="wrap_content" android:id="@+id/buttonDownload"
		android:text="@string/download" android:layout_width="0dp"
		android:layout_below="@+id/buttonUpload" android:layout_alignLeft="@id/strut"
		android:layout_alignParentRight="true"></Button>
	<TextView android:text="" android:layout_below="@+id/buttonCheckUpdate" android:layout_alignParentLeft="true" android:layout_width="fill_parent" android:id="@+id/textViewMessage" android:layout_height="100dp"></TextView>
</RelativeLayout>
</RelativeLayout>
